--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
 /* RESET */
 *,
@@ -65,7 +65,7 @@ body {
   background-color: #dee3e9;
   color: rgb(22, 24, 28);
   min-height: 100vh;
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   position: relative;
 
   scrollbar-width: none; /* Firefox */
@@ -118,7 +118,7 @@ body::-webkit-scrollbar {
 }
 
 .background::before {
-  content: "";
+  content: '';
   background-image: linear-gradient(
     -180deg,
     rgba(0, 0, 0, 0.025) 0,
@@ -176,7 +176,7 @@ body::-webkit-scrollbar {
 }
 
 .header__submit-job::before {
-  content: "";
+  content: '';
   display: inline-block;
   height: 13px;
   width: 2px;
@@ -211,7 +211,7 @@ body::-webkit-scrollbar {
 }
 
 .bookmarks-btn::before {
-  content: "";
+  content: '';
   height: 15px;
   width: 2px;
   display: block;
@@ -246,6 +246,7 @@ body::-webkit-scrollbar {
 .job-list {
   background-color: #fff;
   position: relative;
+  min-height: 140px;
   /* height: 100%; */
   flex: 1;
   display: flex;
@@ -784,7 +785,7 @@ body::-webkit-scrollbar {
 }
 
 .job-info::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 174px;
@@ -955,7 +956,7 @@ body::-webkit-scrollbar {
 }
 
 .reviews__item::before {
-  content: "“";
+  content: '“';
   position: absolute;
   font-size: 50px;
   top: -15px;
